<resources>
    <string name="app_name">Lanchonete</string>
    <string name="cardapio">CARDÁPIO</string>
    <string name="clicar">Clicar</string>

    <string name="product1Name">Bolo</string>
    <string name="product1Value">8.00</string>

    <string name="product2Name">Café</string>
    <string name="product2Value">3.00</string>

    <string name="product3Name">Misto Quente</string>
    <string name="product3Value">4.50</string>

    <string name="product4Name">Pão de Queijo</string>
    <string name="product4Value">2.00</string>
</resources>